add error specs
